Fixes header spacing.

--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -12,7 +12,7 @@ a {
   @include display(flex);
   @include flex-direction(column-reverse);
   text-align: center;
-  margin: 2em 0;
+  margin: 2em 0 0;
 
   nav {
     @include display(flex);
